RESOLVED FIXED72702
Fix compilation warning in ComplexTextControllerCoreText.mm
https://bugs.webkit.org/show_bug.cgi?id=72702
Summary Fix compilation warning in ComplexTextControllerCoreText.mm
Mihnea Ovidenie
Reported 2011-11-18 01:41:12 PST
Attachments
Patch (1.41 KB, patch)
2011-11-18 01:43 PST, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2011-11-18 01:43:38 PST
Andreas Kling
Comment 2 2011-11-18 05:06:01 PST
Comment on attachment 115766 [details] Patch Nice catch! r=me
WebKit Review Bot
Comment 3 2011-11-18 06:16:44 PST
Comment on attachment 115766 [details] Patch Clearing flags on attachment: 115766 Committed r100765: <http://trac.webkit.org/changeset/100765>
WebKit Review Bot
Comment 4 2011-11-18 06:16:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.