Fix compilation warning in ComplexTextControllerCoreText.mm https://bugs.webkit.org/show_bug.cgi?id=72702

Reviewed by Andreas Kling.

No functionality changed, so no new tests.

* platform/graphics/mac/ComplexTextControllerCoreText.mm:
(WebCore::ComplexTextController::collectComplexTextRunsForCharactersCoreText):


Canonical link: https://commits.webkit.org/89264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100765 268f45cc-cd09-0410-ab3c-d52691b4dbfc